--- a/index.html
+++ b/index.html
@@ -3,45 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-<link rel="stylesheet" href="/style.css">
-
-
-    <title>Debugging 101</title>
+    <title>Functions</title>
   </head>
   <body>
+    <h1>Here you will learn more about functions and how to use them.</h1>
+    <h3></h3>
 
-
-
-    <div class="contianer">
-      <h1>Welcome to Debugging 101!</h1>
-     Let's learn how to debug our code.</p>
-    </div>
-
-
-    <input type="text" id="output" placeholder="This is an output"/>
-
-
-<div>
-  <p>This is a paragraph inside a div.</p>
-
-
-
-<p style= color:red;>This text is red.</p>
-
-
-
-<p clss="container">Hello World</p>
-
-
-
-
-<img src="http://placehold.co/400x400" alt="400x400Image">
-
-
-</div>
-
-  
-    <script src="/broken.js"></script>
+    <script src="./functions-part1.js"></script>
+    <script src="./functions-part2.js"></script>
+    <script src="./arrays.js"></script>
   </body>
 </html>
